Number Keys and primary css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <title>Javascript Calculator</title>
   </head>
   <body>
-    <section class="container"></section>
+    <div class="container">
+      <div class="calculation">
+        <p>Calculation Area</p>
+      </div>
+      <div class="keys">
+        <div class="key">AC</div>
+        <div class="key">C</div>
+        <div class="key">%</div>
+        <div class="key accent-color">&divide;</div>
+        <div class="key">7</div>
+        <div class="key">8</div>
+        <div class="key">9</div>
+        <div class="key accent-color">&times;</div>
+        <div class="key">4</div>
+        <div class="key">5</div>
+        <div class="key">6</div>
+        <div class="key accent-color">-</div>
+        <div class="key">1</div>
+        <div class="key">2</div>
+        <div class="key">3</div>
+        <div class="key accent-color">+</div>
+        <div class="key grid-span-2">0</div>
+        <div class="key">.</div>
+        <div class="key accent-color">=</div>
+      </div>
+    </div>
   </body>
 </html>
